vlib/v/checker/tests/assign_expr_undefined_err_d.out
vlib/v/checker/tests/assign_expr_undefined_err_d.vv:2:9: error: undefined variable: `s`
    1 | fn main() {
    2 |     s := '$s'
      |            ^
    3 |     println(s)
    4 | }
