vlib/v/checker/tests/assign_expr_undefined_err_d.vv
fn main() {
	s := '$s'
	println(s)
}
